# fastapi_restaurant

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  entry.sh  pyproject.toml
app/: admin.py  database.py  dependencies.py  main.py  schemas.py  utils.py
app/core/: config.py
migrations/: env.py
migrations/versions/: e278a8fafd38_initial_tables.py
reservation/: crud.py  models.py  schemas.py  utils.py
reservation/api/: v1.py
restaurant_management/: crud.py  models.py  schemas.py
restaurant_management/api/: v1.py
tests/: conftest.py  test_users.py
users/: authentication.py  crud.py  models.py  roles.py  schemas.py
users/api/: v1.py
